--- a/index.html
+++ b/index.html
@@ -11,63 +11,6 @@
   <article>
     <div class="svg-container">
       <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-        <defs>
-          <mask id="mask-a">
-            <rect
-              fill="white"
-              class="mask--text"
-              x="-8"
-              y="-8"
-              width="16"
-              height="16"
-            ></rect>
-            <polygon fill="black" points="-12,-8 8,-8 12,8 -8,8">
-              <animateTransform
-                attributeName="transform"
-                type="translate"
-                from="0 0"
-                to="16 0"
-                dur="3s"
-                begin="0s"
-                repeatCount="1"
-                values="0 0; 0 0; 20 0; 20 0; 20 0"
-                keySplines="
-                0.1 0.8 0.2 1;
-                0.1 0.8 0.2 1;
-                0.1 0.8 0.2 1;
-                0.1 0.8 0.2 1"
-                calcMode="spline"
-              />
-            </polygon>
-          </mask>
-          <mask id="mask-b">
-            <rect
-              fill="white"
-              class="mask--text"
-              x="-8"
-              y="-8"
-              width="16"
-              height="16"
-            ></rect>
-            <polygon fill="grey" points="-12,-8 8,-8 12,8 -8,8">
-              <animateTransform
-                id="mask-b-animate"
-                attributeName="transform"
-                type="translate"
-                from="0 0"
-                to="16 0"
-                dur="4s"
-                begin="0s"
-                repeatCount="100"
-                fill="freeze"
-                values="0 0; 16 0"
-                keySplines="
-                0.1 0.8 0.2 1;"
-                calcMode="spline"
-              />
-            </polygon>
-          </mask>
-        </defs>
         <g transform="translate(50, 5)">
           <text
             id="plum"
@@ -192,21 +135,15 @@
                 attributeName="points"
                 from="-8,-8 8,-8 8,8 -8,8"
                 to="8,-8 8,-8 8,8 8,8"
-                begin="0s"
+                begin="indefinite"
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
                 values="
                 -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 4,8;
-                8,-8 8,-8 8,8 8,8;
                 8,-8 8,-8 8,8 8,8;"
                 keySplines="
-          0.1 0.8 0.2 1;
-          0.1 0.8 0.2 1;
-          0.4 0.8 0.2 1;
-          0.9 0.3 0.8 1"
+          0.1 0.8 0.2 1;"
                 calcMode="spline"
               />
             </polygon>
@@ -269,21 +206,15 @@
                 attributeName="points"
                 from="-8,-8 8,-8 8,8 -8,8"
                 to="8,-8 8,-8 8,8 8,8"
-                begin="0s"
+                begin="indefinite"
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
                 values="
                 -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 4,8;
-                8,-8 8,-8 8,8 8,8;
                 8,-8 8,-8 8,8 8,8;"
                 keySplines="
-          0.1 0.8 0.2 1;
-          0.1 0.8 0.2 1;
-          0.4 0.8 0.2 1;
-          0.9 0.3 0.8 1"
+          0.1 0.8 0.2 1;"
                 calcMode="spline"
               />
             </polygon>
@@ -302,23 +233,17 @@
               <animate
                 id="poly-6-animate"
                 attributeName="points"
-                from="0,-8 0,-8 0,8 0,8"
-                to="-8,-8 8,-8 8,8 -8,8"
+                from="-8,-8 8,-8 8,8 -8,8"
+                to="8,-8 8,-8 8,8 8,8"
                 begin="indefinite"
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
                 values="
-        -8,-8 -8,-8 -8,8 -8,8;
-        -8,-8 -4,-8 -8,8 -8,8;
-        -8,-8 8,-8 8,8 -8,8;
-        -8,-8 8,-8 8,8 -8,8;
-        -8,-8 8,-8 8,8 -8,8;"
+                -8,-8 8,-8 8,8 -6,8;
+                8,-8 8,-8 8,8 8,8;"
                 keySplines="
-  0.1 0.8 0.2 1;
-  0.1 0.8 0.2 1;
-  0.4 0.8 0.2 1;
-  0.9 0.3 0.8 1"
+          0.1 0.8 0.2 1;"
                 calcMode="spline"
               />
             </polygon>
@@ -346,21 +271,15 @@
                 attributeName="points"
                 from="-8,-8 8,-8 8,8 -8,8"
                 to="8,-8 8,-8 8,8 8,8"
-                begin="0s"
+                begin="indefinite"
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
                 values="
                 -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 4,8;
-                8,-8 8,-8 8,8 8,8;
                 8,-8 8,-8 8,8 8,8;"
                 keySplines="
-          0.1 0.8 0.2 1;
-          0.1 0.8 0.2 1;
-          0.4 0.8 0.2 1;
-          0.9 0.3 0.8 1"
+          0.1 0.8 0.2 1;"
                 calcMode="spline"
               />
             </polygon>
@@ -423,21 +342,15 @@
                 attributeName="points"
                 from="-8,-8 8,-8 8,8 -8,8"
                 to="8,-8 8,-8 8,8 8,8"
-                begin="0s"
+                begin="indefinite"
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
                 values="
                 -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 4,8;
-                8,-8 8,-8 8,8 8,8;
                 8,-8 8,-8 8,8 8,8;"
                 keySplines="
-          0.1 0.8 0.2 1;
-          0.1 0.8 0.2 1;
-          0.4 0.8 0.2 1;
-          0.9 0.3 0.8 1"
+          0.1 0.8 0.2 1;"
                 calcMode="spline"
               />
             </polygon>
@@ -500,21 +413,15 @@
                 attributeName="points"
                 from="-8,-8 8,-8 8,8 -8,8"
                 to="8,-8 8,-8 8,8 8,8"
-                begin="0s"
+                begin="indefinite"
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
                 values="
                 -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 4,8;
-                8,-8 8,-8 8,8 8,8;
                 8,-8 8,-8 8,8 8,8;"
                 keySplines="
-          0.1 0.8 0.2 1;
-          0.1 0.8 0.2 1;
-          0.4 0.8 0.2 1;
-          0.9 0.3 0.8 1"
+          0.1 0.8 0.2 1;"
                 calcMode="spline"
               />
             </polygon>
@@ -577,21 +484,15 @@
                 attributeName="points"
                 from="-8,-8 8,-8 8,8 -8,8"
                 to="8,-8 8,-8 8,8 8,8"
-                begin="0s"
+                begin="indefinite"
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
                 values="
                 -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 4,8;
-                8,-8 8,-8 8,8 8,8;
                 8,-8 8,-8 8,8 8,8;"
                 keySplines="
-          0.1 0.8 0.2 1;
-          0.1 0.8 0.2 1;
-          0.4 0.8 0.2 1;
-          0.9 0.3 0.8 1"
+          0.1 0.8 0.2 1;"
                 calcMode="spline"
               />
             </polygon>
@@ -654,21 +555,15 @@
                 attributeName="points"
                 from="-8,-8 8,-8 8,8 -8,8"
                 to="8,-8 8,-8 8,8 8,8"
-                begin="0s"
+                begin="indefinite"
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
                 values="
                 -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 4,8;
-                8,-8 8,-8 8,8 8,8;
                 8,-8 8,-8 8,8 8,8;"
                 keySplines="
-          0.1 0.8 0.2 1;
-          0.1 0.8 0.2 1;
-          0.4 0.8 0.2 1;
-          0.9 0.3 0.8 1"
+          0.1 0.8 0.2 1;"
                 calcMode="spline"
               />
             </polygon>
@@ -731,21 +626,15 @@
                 attributeName="points"
                 from="-8,-8 8,-8 8,8 -8,8"
                 to="8,-8 8,-8 8,8 8,8"
-                begin="0s"
+                begin="indefinite"
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
                 values="
                 -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 -6,8;
-                -8,-8 8,-8 8,8 4,8;
-                8,-8 8,-8 8,8 8,8;
                 8,-8 8,-8 8,8 8,8;"
                 keySplines="
-          0.1 0.8 0.2 1;
-          0.1 0.8 0.2 1;
-          0.4 0.8 0.2 1;
-          0.9 0.3 0.8 1"
+          0.1 0.8 0.2 1;"
                 calcMode="spline"
               />
             </polygon>
