--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 attributeName="points"
                 from="0,-8 0,-8 0,8 0,8"
                 to="-8,-8 8,-8 8,8 -8,8"
-                begin="indefinite"
+                begin="0s"
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
@@ -342,7 +342,7 @@
                 attributeName="points"
                 from="-8,-8 8,-8 8,8 -8,8"
                 to="8,-8 8,-8 8,8 8,8"
-                begin="indefinite"
+                begin="0s"
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
