--- a/index.html
+++ b/index.html
@@ -342,15 +342,12 @@
                 attributeName="points"
                 from="-8,-8 8,-8 8,8 -8,8"
                 to="8,-8 8,-8 8,8 8,8"
-                begin="0s"
+                begin="indefinite"
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
-                values="
-                -8,-8 8,-8 8,8 -6,8;
-                8,-8 8,-8 8,8 8,8;"
-                keySplines="
-          0.1 0.8 0.2 1;"
+                values="-8,-8 8,-8 8,8 -6,8; 8,-8 8,-8 8,8 8,8"
+                keySplines="0.1 0.8 0.2 1"
                 calcMode="spline"
               />
             </polygon>
