--- a/index.html
+++ b/index.html
@@ -139,11 +139,8 @@
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
-                values="
-                -8,-8 8,-8 8,8 -6,8;
-                8,-8 8,-8 8,8 8,8;"
-                keySplines="
-          0.1 0.8 0.2 1;"
+                values="-8,-8 8,-8 8,8 -6,8; 8,-8 8,-8 8,8 8,8"
+                keySplines="0.1 0.8 0.2 1"
                 calcMode="spline"
               />
             </polygon>
@@ -210,11 +207,8 @@
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
-                values="
-                -8,-8 8,-8 8,8 -6,8;
-                8,-8 8,-8 8,8 8,8;"
-                keySplines="
-          0.1 0.8 0.2 1;"
+                values="-8,-8 8,-8 8,8 -6,8; 8,-8 8,-8 8,8 8,8"
+                keySplines="0.1 0.8 0.2 1"
                 calcMode="spline"
               />
             </polygon>
@@ -275,11 +269,8 @@
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
-                values="
-                -8,-8 8,-8 8,8 -6,8;
-                8,-8 8,-8 8,8 8,8;"
-                keySplines="
-          0.1 0.8 0.2 1;"
+                values="-8,-8 8,-8 8,8 -6,8; 8,-8 8,-8 8,8 8,8"
+                keySplines="0.1 0.8 0.2 1"
                 calcMode="spline"
               />
             </polygon>
@@ -414,11 +405,8 @@
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
-                values="
-                -8,-8 8,-8 8,8 -6,8;
-                8,-8 8,-8 8,8 8,8;"
-                keySplines="
-          0.1 0.8 0.2 1;"
+                values="-8,-8 8,-8 8,8 -6,8; 8,-8 8,-8 8,8 8,8"
+                keySplines="0.1 0.8 0.2 1"
                 calcMode="spline"
               />
             </polygon>
@@ -485,11 +473,8 @@
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
-                values="
-                -8,-8 8,-8 8,8 -6,8;
-                8,-8 8,-8 8,8 8,8;"
-                keySplines="
-          0.1 0.8 0.2 1;"
+                values="-8,-8 8,-8 8,8 -6,8; 8,-8 8,-8 8,8 8,8"
+                keySplines="0.1 0.8 0.2 1"
                 calcMode="spline"
               />
             </polygon>
@@ -556,11 +541,8 @@
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
-                values="
-                -8,-8 8,-8 8,8 -6,8;
-                8,-8 8,-8 8,8 8,8;"
-                keySplines="
-          0.1 0.8 0.2 1;"
+                values="-8,-8 8,-8 8,8 -6,8; 8,-8 8,-8 8,8 8,8"
+                keySplines="0.1 0.8 0.2 1"
                 calcMode="spline"
               />
             </polygon>
@@ -627,11 +609,8 @@
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
-                values="
-                -8,-8 8,-8 8,8 -6,8;
-                8,-8 8,-8 8,8 8,8;"
-                keySplines="
-          0.1 0.8 0.2 1;"
+                values="-8,-8 8,-8 8,8 -6,8; 8,-8 8,-8 8,8 8,8"
+                keySplines="0.1 0.8 0.2 1"
                 calcMode="spline"
               />
             </polygon>
