--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 attributeName="points"
                 from="0,-8 0,-8 0,8 0,8"
                 to="-8,-8 8,-8 8,8 -8,8"
-                begin="0s"
+                begin="indefinite"
                 repeatCount="1"
                 fill="freeze"
                 dur="2s"
