--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <nav>
       <ol>
         <li id="game-no">GAME 1</li>
-        <li>ZIGGAWORDS</li>
+        <li class="typo--h1">
+          Z<span>I</span>G<span>G</span>A<span>W</span>O<span>R</span>D<span
+            >S</span
+          >
+        </li>
         <li><button class="secondary" name="stats">STATS</button></li>
       </ol>
     </nav>
