--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <header>
     <nav>
       <ol>
-        <li id="game-no">GAME 1</li>
+        <li id="game-no"><span class="typo--btn">Game 1<</span/li>
         <li class="typo--h1">
           Z<span>I</span>G<span>G</span>A<span>W</span>O<span>R</span>D<span
             >S</span
