--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
               to="0"
               begin="indefinite"
               fill="freeze"
-              dur="2s"
-              values="0;-3;3;-2;2;0"
+              dur="1s"
+              values="0;-3;3;-2;2;0;0"
               keySplines="
+              0.33 0.12 0.64 0.94;
               0.33 0.12 0.64 0.94;
               0.33 0.12 0.64 0.94;
               0.33 0.12 0.64 0.94;
